--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@bitsler/pm2-redis",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "PM2 Module to monitor redis",
   "main": "app.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/BitslerCasino/pm2-redis.git"
